--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </li>
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/presentations.html">Presentations</a></li>
-            <li><a href="/notes/university.html">Notes</a></li>
+            <li><a href="/notes/index.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
