--- a/notes/index.html
+++ b/notes/index.html
@@ -57,7 +57,7 @@
             </li>
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/presentations.html">Presentations</a></li>
-            <li><a href="/notes/university.html">Notes</a></li>
+            <li><a href="/notes/index.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -222,9 +222,9 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <p>
-                  Notes by [<a>University</a>] [<a href="/notes/year.html"
-                    >year</a
-                  >]
+                  Notes by <i class="fas fa-university"></i> <a>University</a>
+                  <i class="fas fa-calendar-check"></i>
+                  <a href="/notes/year.html">year</a>
                 </p>
                 <header>
                   <h2><a href="#main" class="scrolly">Notes</a></h2>
