--- a/photography.html
+++ b/photography.html
@@ -55,7 +55,7 @@
             </li>
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/presentations.html">Presentations</a></li>
-            <li><a href="/notes/university.html">Notes</a></li>
+            <li><a href="/notes/index.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
