--- a/notes/index.html
+++ b/notes/index.html
@@ -222,7 +222,8 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <p>
-                  Notes by <i class="fas fa-university"></i> <a>University</a>
+                  Notes by <i class="fas fa-university"></i>
+                  <a href="/notes/index.html">University</a>
                   <i class="fas fa-calendar-check"></i>
                   <a href="/notes/year.html">year</a>
                 </p>
