--- a/notes/year.html
+++ b/notes/year.html
@@ -221,15 +221,15 @@
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
+                <p>
+                  Notes by <i class="fas fa-university"></i>
+                  <a href="/notes/index.html">University</a>
+                  <i class="fas fa-calendar-check"></i>
+                  <a href="/notes/year.html">year</a>
+                </p>
                 <header>
                   <h2><a href="#main" class="scrolly">Notes</a></h2>
-                  <p>
-                    This section presents a collection of my personal study
-                    materials, including detailed lecture notes, class
-                    summaries, and self-study observations.
-                  </p>
                 </header>
-                <hr />
                 <section id="imperial">
                   <header>
                     <h3>
