--- a/notes/index.html
+++ b/notes/index.html
@@ -223,7 +223,7 @@
               <article id="main">
                 <p>
                   Sorted by <i class="fas fa-university"></i>&nbsp;&nbsp;
-                  <a href="/notes/index.html">University</a>
+                  <a href="/notes/index.html">University</a>&nbsp;&nbsp;
                   <i class="fas fa-calendar-check"></i>&nbsp;&nbsp;
                   <a href="/notes/year.html">year</a>
                 </p>
