--- a/notes/index.html
+++ b/notes/index.html
@@ -222,9 +222,11 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <p>
-                  Sorted by <i class="fas fa-university"></i>&nbsp;&nbsp;
-                  <a href="/notes/index.html">University</a>&nbsp;&nbsp;
-                  <i class="fas fa-calendar-check"></i>&nbsp;&nbsp;
+                  Sorted by &nbsp;&nbsp;
+                  <i class="fas fa-university"></i>&nbsp;<a
+                    href="/notes/index.html"
+                    >University</a
+                  >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
                   <a href="/notes/year.html">year</a>
                 </p>
                 <header>
