--- a/notes/year.html
+++ b/notes/year.html
@@ -222,7 +222,7 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <p>
-                  Sorted by &nbsp;&nbsp;
+                  Sorted by &nbsp;
                   <i class="fas fa-university"></i>&nbsp;<a
                     href="/notes/index.html"
                     >University</a
