--- a/notes/index.html
+++ b/notes/index.html
@@ -239,101 +239,94 @@
                         >Imperial College London</a
                       >
                     </h3>
-                    <p>
-                      This collection contains my notes for various
-                      physics-related courses I've taken at Imperial College
-                      London.
-                    </p>
                   </header>
-                  <ol>
+                  <p>
+                    This collection contains my notes for various
+                    physics-related courses I've taken at Imperial College
+                    London.
+                  </p>
+                  <ul>
                     <li>
-                      <h4><a>Quantum Information (Fall 2023)</a></h4>
-                      <p>
-                        This course was taught by Prof. Myungshik Kim. My notes
-                        were based on his lecture notes and the textbook by
-                        Nielsen and Chuang.
-                      </p>
-                      <ul>
-                        <li>
-                          <a href="/docs/notes/notes-on-quantum-information.pdf"
-                            ><strong>Study</strong> Notes on Quantum
-                            Information</a
-                          >
-                        </li>
-                      </ul>
+                      <a><strong>Quantum Information (Fall 2023)</strong></a
+                      ><br />
+                      This course was taught by Prof. Myungshik Kim. My notes
+                      were based on his lecture notes and the textbook by
+                      Nielsen and Chuang.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/notes-on-quantum-information.pdf"
+                        >Quantum Information</a
+                      >
                     </li>
+                  </ul>
+                  <ul>
                     <li>
-                      <h4>
-                        <a>Mathematical Methods for Physicists (Fall 2023)</a>
-                      </h4>
-                      <ul>
-                        <li>
-                          <a
-                            href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
-                            ><strong>Study</strong> Notes on Mathematical
-                            Methods for Physicists</a
-                          >
-                        </li>
-                        <li>
-                          <a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
-                            ><strong>Review</strong> Notes on Mathematical
-                            Methods for Physicists</a
-                          >
-                        </li>
-                      </ul>
+                      <a
+                        ><strong
+                          >Mathematical Methods for Physicists (Fall
+                          2023)</strong
+                        ></a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;
+                      <strong>Study Notes: </strong
+                      ><a
+                        href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                        >Mathematical Methods for Physicists</a
+                      ><br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;
+                      <strong>Review Notes: </strong
+                      ><a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
+                        >Mathematical Methods for Physicists</a
+                      >
                     </li>
+                  </ul>
+                  <ul>
                     <li>
-                      <h4><a>Advanced Classical Mechanics (Fall 2023)</a></h4>
-                      <ul>
-                        <li>
-                          <a
-                            href="/docs/notes/notes-on-advanced-classical-physics.pdf"
-                            ><strong>Study</strong> Note on Advanced Classical
-                            Mechanics</a
-                          >
-                        </li>
-                      </ul>
+                      <strong
+                        ><a>Advanced Classical Mechanics (Fall 2023)</a></strong
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                        href="/docs/notes/notes-on-advanced-classical-physics.pdf"
+                        ><strong>Study</strong> Note on Advanced Classical
+                        Mechanics</a
+                      >
                     </li>
+                  </ul>
+                  <ul>
                     <li>
-                      <h4><a>Quantum Theory of Matter (Spring 2024)</a></h4>
-                      <ul>
-                        <li>
-                          <a
-                            href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                            ><strong>Study</strong> Notes on Quantum Theory of
-                            Matter</a
-                          >
-                        </li>
-                      </ul>
+                      <strong
+                        ><a>Quantum Theory of Matter (Spring 2024)</a></strong
+                      >
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                        href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
+                        ><strong>Study</strong> Notes on Quantum Theory of
+                        Matter</a
+                      >
                     </li>
+                  </ul>
+                  <ul>
                     <li>
-                      <h4><a>Laser Technology (Spring 2024)</a></h4>
-                      <p>
-                        This course covers two main topics:
-                        <strong>Laser Device Technology</strong> and
-                        <strong>Nonlinear Optics</strong>. I am not particularly
-                        interested in the first topic, as it focuses primarily
-                        on conceptual understanding and requires memorizing
-                        numerous concepts for exams, rather than employing
-                        rigorous mathematical derivations to prove or explore
-                        the principles in depth.
-                      </p>
-                      <ul>
-                        <li>
-                          <a
-                            href="/docs/notes/notes-on-laser-device-technology.pdf"
-                            ><strong>Study</strong> Note on Laser Device
-                            Technology</a
-                          >
-                        </li>
-                        <li>
-                          <a href="/docs/notes/notes-on-nonlinear-optics.pdf"
-                            ><strong>Study</strong> Notes on Nonlinear Optics</a
-                          >
-                        </li>
-                      </ul>
+                      <strong><a>Laser Technology (Spring 2024)</a></strong
+                      ><br />
+                      This course covers two main topics:
+                      <strong>Laser Device Technology</strong> and
+                      <strong>Nonlinear Optics</strong>. I am not particularly
+                      interested in the first topic, as it focuses primarily on
+                      conceptual understanding and requires memorizing numerous
+                      concepts for exams, rather than employing rigorous
+                      mathematical derivations to prove or explore the
+                      principles in depth. <br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                        href="/docs/notes/notes-on-laser-device-technology.pdf"
+                        ><strong>Study</strong> Note on Laser Device
+                        Technology</a
+                      ><br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<a
+                        href="/docs/notes/notes-on-nonlinear-optics.pdf"
+                        ><strong>Study</strong> Notes on Nonlinear Optics</a
+                      >
                     </li>
-                  </ol>
+                  </ul>
                 </section>
                 <hr />
                 <section id="imperial">
