--- a/notes/index.html
+++ b/notes/index.html
@@ -247,8 +247,8 @@
                   </p>
                   <ul>
                     <li>
-                      <a><strong>Quantum Information (Fall 2023)</strong></a
-                      ><br />
+                      <h4><a>Quantum Information (Fall 2023)</a></h4>
+                      <br />
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
                       Nielsen and Chuang.<br />
@@ -285,10 +285,11 @@
                       <strong
                         ><a>Advanced Classical Mechanics (Fall 2023)</a></strong
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Note: </strong
+                      ><a
                         href="/docs/notes/notes-on-advanced-classical-physics.pdf"
-                        ><strong>Study</strong> Note on Advanced Classical
-                        Mechanics</a
+                        >Advanced Classical Mechanics</a
                       >
                     </li>
                   </ul>
@@ -296,7 +297,7 @@
                     <li>
                       <strong
                         ><a>Quantum Theory of Matter (Spring 2024)</a></strong
-                      >
+                      ><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
                         href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
                         ><strong>Study</strong> Notes on Quantum Theory of
