--- a/notes/index.html
+++ b/notes/index.html
@@ -298,10 +298,11 @@
                       <strong
                         ><a>Quantum Theory of Matter (Spring 2024)</a></strong
                       ><br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a
                         href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                        ><strong>Study</strong> Notes on Quantum Theory of
-                        Matter</a
+                        >Quantum Theory of Matter</a
                       >
                     </li>
                   </ul>
@@ -317,14 +318,16 @@
                       concepts for exams, rather than employing rigorous
                       mathematical derivations to prove or explore the
                       principles in depth. <br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<a
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Note: </strong
+                      ><a
                         href="/docs/notes/notes-on-laser-device-technology.pdf"
-                        ><strong>Study</strong> Note on Laser Device
-                        Technology</a
+                        >Laser Device Technology</a
                       ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<a
-                        href="/docs/notes/notes-on-nonlinear-optics.pdf"
-                        ><strong>Study</strong> Notes on Nonlinear Optics</a
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/notes-on-nonlinear-optics.pdf"
+                        >Nonlinear Optics</a
                       >
                     </li>
                   </ul>
