--- a/notes/index.html
+++ b/notes/index.html
@@ -247,7 +247,7 @@
                   </p>
                   <ul>
                     <li>
-                      <h4><a>Quantum Information (Fall 2023)</a></h4>
+                      <strong>Quantum Information (Fall 2023)</strong>
                       <br />
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
@@ -261,11 +261,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <a
-                        ><strong
-                          >Mathematical Methods for Physicists (Fall
-                          2023)</strong
-                        ></a
+                      <strong
+                        >Mathematical Methods for Physicists (Fall 2023)</strong
                       ><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;
                       <strong>Study Notes: </strong
@@ -282,8 +279,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong
-                        ><a>Advanced Classical Mechanics (Fall 2023)</a></strong
+                      <strong>Advanced Classical Mechanics (Fall 2023)</strong
                       ><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Note: </strong
@@ -295,8 +291,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong
-                        ><a>Quantum Theory of Matter (Spring 2024)</a></strong
+                      <strong>Quantum Theory of Matter (Spring 2024)</strong
                       ><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -308,8 +303,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong><a>Laser Technology (Spring 2024)</a></strong
-                      ><br />
+                      <strong>Laser Technology (Spring 2024)</strong><br />
                       This course covers two main topics:
                       <strong>Laser Device Technology</strong> and
                       <strong>Nonlinear Optics</strong>. I am not particularly
