--- a/notes/index.html
+++ b/notes/index.html
@@ -318,7 +318,7 @@
                         href="/docs/notes/notes-on-laser-device-technology.pdf"
                         >Laser Device Technology</a
                       ><br />
-                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-nonlinear-optics.pdf"
                         >Nonlinear Optics</a
@@ -326,120 +326,6 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
-                <section id="imperial">
-                  <header>
-                    <h3>
-                      <a href="#imperial" class="scrolly"
-                        >Imperial College London</a
-                      >
-                    </h3>
-                    <p>
-                      This collection contains my notes for various
-                      physics-related courses I've taken at Imperial College
-                      London.
-                    </p>
-                  </header>
-
-                  <section id="imperial-quantum-information">
-                    <h4><a>Quantum Information (Fall 2023)</a></h4>
-                    <p>
-                      This course was taught by Prof. Myungshik Kim. My notes
-                      were based on his lecture notes and the textbook by
-                      Nielsen and Chuang.
-                    </p>
-                    <ul>
-                      <li>
-                        <a href="/docs/notes/notes-on-quantum-information.pdf"
-                          ><strong>Study</strong> Notes on Quantum
-                          Information</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="imperial-quantum-optics">
-                    <h4><a>Quantum Optics (Fall 2023)</a></h4>
-                    <ul>
-                      <li>
-                        <a href="/docs/notes/notes-on-quantum-optics.pdf"
-                          ><strong>Study</strong> Notes on Quantum Optics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="imperial-mathematical-methods-for-physicists">
-                    <h4>
-                      <a>Mathematical Methods for Physicists (Fall 2023)</a>
-                    </h4>
-                    <ul>
-                      <li>
-                        <a
-                          href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
-                          ><strong>Study</strong> Notes on Mathematical Methods
-                          for Physicists</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
-                          ><strong>Review</strong> Notes on Mathematical Methods
-                          for Physicists</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="imperial-advanced-classical-mechanics">
-                    <h4><a>Advanced Classical Mechanics (Fall 2023)</a></h4>
-                    <ul>
-                      <li>
-                        <a
-                          href="/docs/notes/notes-on-advanced-classical-physics.pdf"
-                          ><strong>Study</strong> Note on Advanced Classical
-                          Mechanics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="imperial-quantum-theory-of-matter">
-                    <h4><a>Quantum Theory of Matter (Spring 2024)</a></h4>
-                    <ul>
-                      <li>
-                        <a
-                          href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                          ><strong>Study</strong> Notes on Quantum Theory of
-                          Matter</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="imperial-laser-technology">
-                    <h4><a>Laser Technology (Spring 2024)</a></h4>
-                    <p>
-                      This course covers two main topics:
-                      <strong>Laser Device Technology</strong> and
-                      <strong>Nonlinear Optics</strong>. I am not particularly
-                      interested in the first topic, as it focuses primarily on
-                      conceptual understanding and requires memorizing numerous
-                      concepts for exams, rather than employing rigorous
-                      mathematical derivations to prove or explore the
-                      principles in depth.
-                    </p>
-                    <ul>
-                      <li>
-                        <a
-                          href="/docs/notes/notes-on-laser-device-technology.pdf"
-                          ><strong>Study</strong> Note on Laser Device
-                          Technology</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/notes-on-nonlinear-optics.pdf"
-                          ><strong>Study</strong> Notes on Nonlinear Optics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                </section>
-
                 <hr />
 
                 <section id="hust">
@@ -449,34 +335,34 @@
                         Huazhong University of Science and Technology</a
                       >
                     </h3>
-                    <p>
-                      This collection includes notes from my undergraduate
-                      studies, primarily written in Chinese. They cover a mix of
-                      topics, ranging from class lectures to self-directed
-                      learning.
-                    </p>
                   </header>
-
+                  <p>
+                    This collection includes notes from my undergraduate
+                    studies, primarily written in Chinese. They cover a mix of
+                    topics, ranging from class lectures to self-directed
+                    learning.
+                  </p>
                   <section id="hust-mathematical-methods-in-physics">
-                    <h4><a>Mathematical Methods in Physics (Fall 2019)</a></h4>
-                    <p>
-                      This course consists of two parts. The first part,
-                      <strong>Complex Analysis</strong>, was taught by Prof.
-                      Cheng-Gang Shao. The second part,
-                      <strong>Equations of Mathematical Physics</strong>, was
-                      taught by Prof. Yong Hu. The content and structure of my
-                      notes primarily derived from his lecture notes.
-                    </p>
                     <ul>
                       <li>
-                        <a href="/docs/notes/[复变函数]期末复习笔记.pdf"
-                          ><strong>Review</strong> Notes on Complex Analysis</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
-                          ><strong>Study</strong> Notes on Equations of
-                          Mathematical Physics</a
+                        <strong
+                          >Mathematical Methods in Physics (Fall 2019)</strong
+                        ><br />
+                        This course consists of two parts. The first part,
+                        <strong>Complex Analysis</strong>, was taught by Prof.
+                        Cheng-Gang Shao. The second part,
+                        <strong>Equations of Mathematical Physics</strong>, was
+                        taught by Prof. Yong Hu. The content and structure of my
+                        notes primarily derived from his lecture notes. <br />
+                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          >Review Note: </strong
+                        ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
+                          >Complex Analysis</a
+                        ><br />
+                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          >Study Notes: </strong
+                        ><a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
+                          >Equations of Mathematical Physics</a
                         >
                       </li>
                     </ul>
