--- a/notes/index.html
+++ b/notes/index.html
@@ -368,19 +368,18 @@
                     </ul>
                   </section>
                   <section id="hust-theoretical-mechanics">
-                    <h4><a>Theoretical Mechanics (Fall 2019)</a></h4>
-                    <p>
-                      Taught by Prof. Sheng-You Huang, this course covered
-                      topics ranging from Lagrangian Mechanics to Hamiltonian
-                      Mechanics, with several applications including central
-                      force motion, rigid bodies, and small oscillations.
-                      Notably, these were my first notes written in English.
-                    </p>
                     <ul>
                       <li>
-                        <a href="/docs/notes/note-on-classical-mechanics.pdf"
-                          ><strong>Study</strong> Notes on Theoretical
-                          Mechanics</a
+                        <strong>Theoretical Mechanics (Fall 2019)</strong><br />
+                        Taught by Prof. Sheng-You Huang, this course covered
+                        topics ranging from Lagrangian Mechanics to Hamiltonian
+                        Mechanics, with several applications including central
+                        force motion, rigid bodies, and small oscillations.
+                        Notably, these were my first notes written in English.
+                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                          >Study Notes: </strong
+                        ><a href="/docs/notes/note-on-classical-mechanics.pdf"
+                          >Theoretical Mechanics</a
                         >
                       </li>
                     </ul>
