--- a/notes/index.html
+++ b/notes/index.html
@@ -342,63 +342,57 @@
                     topics, ranging from class lectures to self-directed
                     learning.
                   </p>
-                  <section id="hust-mathematical-methods-in-physics">
-                    <ul>
-                      <li>
-                        <strong
-                          >Mathematical Methods in Physics (Fall 2019)</strong
-                        ><br />
-                        This course consists of two parts. The first part,
-                        <strong>Complex Analysis</strong>, was taught by Prof.
-                        Cheng-Gang Shao. The second part,
-                        <strong>Equations of Mathematical Physics</strong>, was
-                        taught by Prof. Yong Hu. The content and structure of my
-                        notes primarily derived from his lecture notes. <br />
-                        <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
-                          >Review Note: </strong
-                        ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
-                          >Complex Analysis</a
-                        ><br />
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                          >Study Notes: </strong
-                        ><a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
-                          >Equations of Mathematical Physics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="hust-theoretical-mechanics">
-                    <ul>
-                      <li>
-                        <strong>Theoretical Mechanics (Fall 2019)</strong><br />
-                        Taught by Prof. Sheng-You Huang, this course covered
-                        topics ranging from Lagrangian Mechanics to Hamiltonian
-                        Mechanics, with several applications including central
-                        force motion, rigid bodies, and small oscillations.
-                        Notably, these were my first notes written in English.
-                        <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                          >Study Notes: </strong
-                        ><a href="/docs/notes/note-on-classical-mechanics.pdf"
-                          >Theoretical Mechanics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
-                  <section id="hust-electromagnetics">
-                    <h4><a>Electromagnetics (Fall 2019)</a></h4>
-                    <p>
+                  <ul>
+                    <li>
+                      <strong
+                        >Mathematical Methods in Physics (Fall 2019)</strong
+                      ><br />
+                      This course consists of two parts. The first part,
+                      <strong>Complex Analysis</strong>, was taught by Prof.
+                      Cheng-Gang Shao. The second part,
+                      <strong>Equations of Mathematical Physics</strong>, was
+                      taught by Prof. Yong Hu. The content and structure of my
+                      notes primarily derived from his lecture notes. <br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Note: </strong
+                      ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
+                        >Complex Analysis</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
+                        >Equations of Mathematical Physics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Theoretical Mechanics (Fall 2019)</strong><br />
+                      Taught by Prof. Sheng-You Huang, this course covered
+                      topics ranging from Lagrangian Mechanics to Hamiltonian
+                      Mechanics, with several applications including central
+                      force motion, rigid bodies, and small oscillations.
+                      Notably, these were my first notes written in English.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/note-on-classical-mechanics.pdf"
+                        >Theoretical Mechanics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Electromagnetics (Fall 2019)</strong><br />
                       This course was taught by Prof. Xue-Wen Chen, which
                       covered include electrostatics, magnetostatics,
-                      electromagnetic waves, and Maxwell's equations.
-                    </p>
-                    <ul>
-                      <li>
-                        <a href="/docs/notes/[电磁学]期末复习笔记.pdf"
-                          ><strong>Review</strong> Notes on Electromagnetics</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
+                      electromagnetic waves, and Maxwell's equations.<br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[电磁学]期末复习笔记.pdf"
+                        >Electromagnetics</a
+                      >
+                    </li>
+                  </ul>
                   <section id="hust-optics">
                     <h4><a>Optics (Spring 2020)</a></h4>
                     <p>
