--- a/notes/index.html
+++ b/notes/index.html
@@ -393,39 +393,38 @@
                       >
                     </li>
                   </ul>
-                  <section id="hust-optics">
-                    <h4><a>Optics (Spring 2020)</a></h4>
-                    <p>
+                  <ul>
+                    <li>
+                      <strong>Optics (Spring 2020)</strong><br />
                       This term was unique due to COVID-19, as we had to attend
                       lectures online from home. The course was taught by Prof.
                       Lu-Shuai Cao and Prof. Ze-Huang Lu. My notes were selected
                       as exemplary for the course and shared with classmates.
                       Due to the large file size, the notes have been divided
-                      into four parts.
-                    </p>
-                    <ul>
-                      <li>
-                        <a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
-                          ><strong>Study</strong> Notes on Optics - Part 1</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
-                          ><strong>Study</strong> Notes on Optics - Part 2</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
-                          ><strong>Study</strong> Notes on Optics - Part 4</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
-                          ><strong>Study</strong> Notes on Optics - Part 4</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
+                      into four parts.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
+                        >Optics - Part 1</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
+                        >Optics - Part 2</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
+                        >Optics - Part 3</a
+                      ><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
+                        >Optics - Part 4</a
+                      >
+                    </li>
+                  </ul>
+
                   <section id="hust-analogue-electronics">
                     <h4><a>Analogue Electronics (Spring 2020)</a></h4>
                     <p>
