--- a/notes/index.html
+++ b/notes/index.html
@@ -614,37 +614,37 @@
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/Ch1_Phase in QM.pdf"
-                          >Chapter 1: Phase in quantum mechanics</a
+                          >Chapter 1: Phase in Quantum Mechanics</a
                         ><br />
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a
                           href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
-                          >Chapter 2: Path integral formalism of quantum
-                          mechanics</a
+                          >Chapter 2: Path Integral Formalism of Quantum
+                          Mechanics</a
                         ><br />
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a href="/docs/notes/Ch3_The WKB Approximation.pdf"
-                          >Chapter 3: The WKB approximation</a
+                          >Chapter 3: The WKB Approximation</a
                         ><br />
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a
                           href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
-                          >Chapter 4: Rotation and vibration of molecules</a
+                          >Chapter 4: Rotation and Vibration of Molecules</a
                         ><br />
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a
                           href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
-                          >Chapter 5: Variation principle</a
+                          >Chapter 5: Variation Principle</a
                         ><br />
                         <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                           >Study Notes: </strong
                         ><a
                           href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
-                          >Chapter 6: Introduction to many-body theory</a
+                          >Chapter 6: Introduction to Many-Body Theory</a
                         >
                       </li>
                     </ul>
