--- a/notes/index.html
+++ b/notes/index.html
@@ -657,20 +657,18 @@
                       <a href="#others" class="scrolly">Others</a>
                     </h3>
                   </header>
-                  <section id="others-physics-gre">
-                    <h4><a>Physics GRE (Fall 2021)</a></h4>
-                    <p>
+                  <ul>
+                    <li>
+                      <strong>Physics GRE (Fall 2021)</strong><br />
                       These are my self-study notes for the Physics GRE, which I
-                      took in 2021.
-                    </p>
-                    <ul>
-                      <li>
-                        <a href="/docs/notes/Physics_GRE_Notes.pdf"
-                          ><strong>Study</strong> Notes on Physics GRE</a
-                        >
-                      </li>
-                    </ul>
-                  </section>
+                      took in 2021.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/Physics_GRE_Notes.pdf"
+                        >Physics GRE</a
+                      >
+                    </li>
+                  </ul>
                 </section>
               </article>
             </div>
