--- a/notes/index.html
+++ b/notes/index.html
@@ -261,6 +261,16 @@
                   </ul>
                   <ul>
                     <li>
+                      <strong>Quantum Optics (Fall 2023)</strong><br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/notes-on-quantum-optics.pdf"
+                        >Quantum Optics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
                       <strong
                         >Mathematical Methods for Physicists (Fall 2023)</strong
                       ><br />
