--- a/notes/year.html
+++ b/notes/year.html
@@ -90,10 +90,6 @@
                 </h4>
                 <p></p>
                 <h4>
-                  <a href="#2022" class="scrolly">2022</a>
-                </h4>
-                <p></p>
-                <h4>
                   <a href="#2021" class="scrolly">2021</a>
                 </h4>
                 <p></p>
@@ -227,12 +223,72 @@
                   </ul>
                 </section>
                 <hr />
-                <section id="2022">
+                <section id="2021">
                   <header>
                     <h3>
-                      <a href="#2022" class="scrolly">2022</a>
+                      <a href="#2021" class="scrolly">2021</a>
                     </h3>
                   </header>
+                  <ul>
+                    <li>
+                      <strong
+                        >Thermodynamics and Statistical Physics (Spring
+                        2021)</strong
+                      ><br />
+                      This course, taught by Prof. Shun Wang, was quite
+                      challenging. It was conducted entirely in English,
+                      including the coursework and exams. Each week, we were
+                      required to read research papers, answer related
+                      questions, and at the end of the term, we wrote a small
+                      essay. Additionally, I worked on a small project focused
+                      on the Ising Model. My study notes are primarily based on
+                      the textbook by David Tong.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/note-on-statistical-physics.pdf"
+                        >Thermodynamics and Statistical Physics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Solid State Physics (Spring 2021)</strong><br />
+                      This course was taught by Prof. Liu-Song Yuan.<br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[固体物理]期末复习笔记.pdf"
+                        >Solid State Physics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Quantum Optics (Fall 2021)</strong><br />
+                      This course was taught by Prof. Jia-Hua Li.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[量子光学]学习笔记.pdf"
+                        >Quantum Optics</a
+                      ><br />
+                      <i class="fas fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Review Notes: </strong
+                      ><a href="/docs/notes/[量子光学]复习笔记.pdf"
+                        >Quantum Optics</a
+                      >
+                    </li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <strong>Introduction to Plasma Physics (Fall 2021)</strong
+                      ><br />
+                      This course was taught by Prof. He-Lin Wei.<br />
+                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
+                        >Study Notes: </strong
+                      ><a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
+                        >Introduction to Plasma Physics</a
+                      >
+                    </li>
+                  </ul>
                 </section>
               </article>
             </div>
